--- a/debian/rules
+++ b/debian/rules
@@ -39,20 +39,21 @@ clean:
 	# Add here commands to clean up after the build process.
 	$(MAKE) clean
 
-	dh_clean 
+	dh_clean
 
 install: build
 	dh_testdir
 	dh_testroot
-	dh_clean -k 
+	dh_prep
+	#dh_clean -k
 	dh_installdirs
-
+	
 	# Add here commands to install the package into debian/cabrio.
 	$(MAKE) DESTDIR=$(CURDIR)/debian/cabrio \
 		BIN_DIR=$(CURDIR)/debian/cabrio/usr/bin \
 		DATA_DIR=$(CURDIR)/debian/cabrio/usr/share/cabrio \
 		install
-
+	#$(MAKE) -C builddir DESTDIR=$(CURDIR)/debian/cabrio install
 
 # Build architecture-independent files here.
 binary-indep: build install
