--- a/debian/control
+++ b/debian/control
@@ -5,13 +5,13 @@ Maintainer: Steve Maddison <steve@cabrio-fe.org>
 Build-Depends: debhelper (>= 9), libavcodec-dev, libavutil-dev, libavformat-dev, freeglut3-dev, freeglut3, libsdl1.2-dev, libsdl-image1.2-dev, libsdl-gfx1.2-dev, libsdl-mixer1.2-dev, libsdl-ttf2.0-dev, libswscale-dev, libxml2-dev, zlib1g-dev
 Standards-Version: 3.9.5
 Homepage: http://www.cabrio-fe.org/
-Vcs-Git: git://github.com/fredbcode/cabrio.git
-Vcs-Browser: https://github.com/fredbcode/cabrio
+Vcs-Git: git://github.com/SteveMaddison/cabrio.git
+Vcs-Browser: https://github.com/SteveMaddison/cabrio
 
 Package: cabrio
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: A front end for video game emulators
+Description: Front end for video game emulators
  Cabrio is a graphical front end for video game emulators
  originall designed for use on arcade cabinets, but also
  usable on your regular computer.
